--- a/about.html
+++ b/about.html
@@ -148,7 +148,8 @@
                                         I have experience developing full-stack websites and web
                                         applications handling everything from the design process to the back-end
                                         infrastructure. The Simulation Game I built for the Chemistry department
-                                        at UC Santa Barbara is an example of one of these web applications.
+                                        at UC Santa Barbara is an example of one of these web applications which you can view
+                                        <a href="https://github.com/Mgla96/HappyCows">here</a>.
                                         </br></br>
                                         I also have experience with Python in developing Machine learning models
                                         without the assistance of libraries such as scikit-learn as well as
@@ -160,7 +161,8 @@
                                         on standby to do the next step after model rendering had completed.
                                         I created two python scripts that automated this process for all models
                                         at once so only 1 manual step was required in total saving the
-                                        researchers valuable time.
+                                        researchers valuable time. You can view these scripts
+                                        <a href="https://github.com/Mgla96/OceanRecoveryLabScripts">here</a>.
                                     </p>
                                 </div>
 
