--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                                             technology and witnessing the merge between science fiction
                                             and reality. This is what has intrigued my interest in
                                             exploring areas such as machine learning, decentralized
-                                            applications, 3d-printing, and quadcopters. I am very
+                                            applications, 3D printing, and quadcopters. I am very
                                             fortunate to enter a field that I feel so passionate about and
                                             am eager to continue developing my skills and gaining
                                             experience within the world of software.
@@ -156,7 +156,7 @@
                                         creating scripts to automate workflow.
                                         Researchers in the Ocean Recoveries Lab at UC Santa Barbara needed to
                                         measure the growth of coral reefs through converting
-                                        their photos taken in the field to correctly scaled 3d models. This
+                                        their photos taken in the field to correctly scaled 3D models. This
                                         process required over 10 steps for every model and researchers had to be
                                         on standby to do the next step after model rendering had completed.
                                         I created two python scripts that automated this process for all models
