about me text update

--- a/about.html
+++ b/about.html
@@ -153,12 +153,12 @@
                                         </br></br>
                                         I also have experience with Python in developing Machine learning models
                                         without the assistance of libraries such as scikit-learn as well as
-                                        creating scripts to automate workflow.
-                                        Researchers in the Ocean Recoveries Lab at UC Santa Barbara needed to
+                                        creating scripts to automate workflow. I created some of these scripts for 
+                                        researchers in the Ocean Recoveries Lab at UC Santa Barbara. They needed to
                                         measure the growth of coral reefs through converting
                                         their photos taken in the field to correctly scaled 3D models. This
                                         process required over 10 steps for every model and researchers had to be
-                                        on standby to do the next step after model rendering had completed.
+                                        on standby to do the next step after model rendering had completed which could take numerous hours to render one model.
                                         I created two python scripts that automated this process for all models
                                         at once so only 1 manual step was required in total saving the
                                         researchers valuable time. You can view these scripts
