--- a/about.html
+++ b/about.html
@@ -169,8 +169,7 @@
                             </div>
                         </div>
 
-                        <div class="row aboutpadding justify-content-center align-self-center row-eq-height c2">
-
+                        <div class="row aboutpadding justify-content-center align-self-center row-eq-height">
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 my-auto">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
 
@@ -183,7 +182,6 @@
                                             the beauty of national parks whenever I can.
                                         </p>
                                 </div>
-
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 my-auto">
                                 <div data-aos="fade-right" data-aos-duration="1000">
