--- a/about.html
+++ b/about.html
@@ -136,11 +136,11 @@
                                 <div data-aos="fade-left" data-aos-duration="1000">
                                     <div class="image center-block">
                                         <img src="css/images/code.jpg" class="rounded img-fluid center-block"
-                                            alt="Yosemite" title="Yosemite">
+                                            alt="code" title="code">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto" style="padding-top: 1rem;">
                                 <div data-aos="zoom-in" data-aos-duration="1000">
                                     <h3 id="ev2">Skills</h3>
                                     <p>
