--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                                     <h3 id="ev1">Interests</h1>
                                         <p>
                                             Hi! My name is Matt, I recently graduated from
-                                            University of California, Santa Barbara in June 2020 and
+                                            the University of California, Santa Barbara in June 2020 and
                                             received a B.S in Computer Science. I love exploring new
                                             technology and witnessing the merge between science fiction
                                             and reality. This is what has intrigued my interest in
