weights in stock

--- a/index.html
+++ b/index.html
@@ -279,6 +279,36 @@
                                 </div>
                             </div>
 
+                            <div class="mb-5 mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                                <div class="team-item news c-info">
+                                    <div class="image">
+                                        <figure
+                                            class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
+                                            <img src="css/images/weightsinstock.png"
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Gomoku AI">
+                                        </figure>
+                                    </div>
+                                    <h3 class="styled">Gym Equipment Finder</h3>
+                                    <h6 class="styled position">Web Application</h6>
+                                    <p class="software">Software: Python, Flask, Heroku, Postgres</p>
+                                    <div class="separator"></div>
+                                    <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
+                                        data-target="#collapse12" aria-expanded="false" aria-controls="collapseExample">
+                                        Learn More
+                                    </button>
+                                    <div class="collapse" id="collapse12">
+                                        <div class="card card-body">
+                                            <p style="text-align: left;">Due to the closure of gyms because of COVID-19, fitness equipment was sold out everywhere and was very hard to come by. I created this web application that scrapes popular fitness websites every hour for in stock deals and displays them all in one place so all the effort of searching for in stock equipment is already done. I used the scraper successfully for myself when building a home gym and converted it into a web application for others to use as well.</p>
+                                            <p class="date">Jun 2020</p>
+                                        </div>
+                                        <button onclick="window.location.href = 'https://www.weightsinstock.com'" type="button"
+                                        class="btn btn-outline-dark ">
+                                        weightsinstock.com</i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
 
 
                             <div class="mb-5 mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
