--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylecomp.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -137,8 +137,8 @@
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 my-auto">
                                 <div data-aos="fade-left" data-aos-duration="1000">
                                     <div class="image center-block">
-                                        <img src="css/images/code.jpg" class="rounded img-fluid center-block"
-                                            alt="code" title="code">
+                                        <img src="css/images/code.jpg" class="rounded img-fluid center-block" alt="code"
+                                            title="code">
                                     </div>
                                 </div>
                             </div>
@@ -146,21 +146,24 @@
                                 <div data-aos="zoom-in" data-aos-duration="1000">
                                     <h3 id="ev2">Skills</h3>
                                     <p>
-                                        The languages I am most proficient in are C++ and Python, followed by Javascript and Java. 
+                                        The languages I am most proficient in are C++ and Python, followed by Javascript
+                                        and Java.
                                         I have experience developing full-stack websites and web
                                         applications handling everything from the design process to the back-end
                                         infrastructure. The Simulation Game I built for the Chemistry department
-                                        at UC Santa Barbara is an example of one of these web applications which you can view
+                                        at UC Santa Barbara is an example of one of these web applications which you can
+                                        view
                                         <a href="https://github.com/Mgla96/HappyCows">here</a>.
                                         </br></br>
                                         I also have experience with Python in developing Machine learning models
                                         without the assistance of libraries such as scikit-learn as well as
-                                        creating scripts to automate workflow. I created some of these scripts for 
+                                        creating scripts to automate workflow. I created some of these scripts for
                                         researchers in the Ocean Recoveries Lab at UC Santa Barbara. They needed to
                                         measure the growth of coral reefs through converting
                                         their photos taken in the field to correctly scaled 3D models. This
                                         process required over 10 steps for every model and researchers had to be
-                                        on standby to do the next step after model rendering had completed which could take numerous hours to render one model.
+                                        on standby to do the next step after model rendering had completed which could
+                                        take numerous hours to render one model.
                                         I created two python scripts that automated this process for all models
                                         at once so only 1 manual step was required in total saving the
                                         researchers valuable time. You can view these scripts
@@ -241,21 +244,21 @@
                     {
                         breakpoint: 768,
                         options: {
-                            maxParticles: 200,
+                            maxParticles: 50,
                             color: '#ffdf00',
                             connectParticles: false
                         }
                     }, {
                         breakpoint: 425,
                         options: {
-                            maxParticles: 120,
+                            maxParticles: 30,
                             connectParticles: false,
                             color: '#ffdf00'
                         }
                     }, {
                         breakpoint: 320,
                         options: {
-                            maxParticles: 35,
+                            maxParticles: 20,
                             connectParticles: false,
                             color: '#ffdf00'
                         }
@@ -270,9 +273,3 @@
 </body>
 
 </html>
-
-    <!--extra
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    -->
