--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta name="description" content="Software Engineering Portfolio | Matt Gottlieb">
     <meta name="keywords" content="software,engineer,portfolio,gottlieb,mattgottlieb,matthewgottlieb,computer science">
     <meta name="author" content="Matt Gottlieb">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 </head>
