--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-light bg-light shadow fixed-top navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="css/images/mattlogoblack.svg" width="150" height="auto" alt="">
+                <img src="css/images/mattlogoblack.svg" width="150" height="auto" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
