--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
+                    <!--
                     <li class="nav-item">
                         <a class="nav-link active" href="#home">
                             <ion-icon style="margin-right: 5px" name="home"></ion-icon>Home
                         </a>
                     </li>
+                    -->
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">
-                            <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
+                        <a class="nav-link active" href="#projects">
+                            <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">
-                            <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
+                        <a class="nav-link" href="about.html">
+                            <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
                         </a>
                     </li>
                     <li class="nav-item">
@@ -78,7 +80,7 @@
     </nav>
 
 
-    <div class="header-photo main" id="home">
+    <div class="header-photo main" id="projects">
         <canvas class="background"></canvas>
         <div class="container">
             <div class="row">
@@ -99,7 +101,7 @@
     </div>
     <div>
         <div class="container card-section bg-white main-raiser">
-            <div class="card-block mb30" id="projects">
+            <div class="card-block mb30" id="">
                 <div class="p-3 mb-5 rounded">
                     <div class="section-title mb-0 text-center">
                         <h2>Projects & Work Experience</h2>
