--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </li>
                     -->
                     <li class="nav-item">
-                        <a class="nav-link active" href="#projects">
+                        <a class="nav-link active" href="index.html">
                             <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
                         </a>
                     </li>
