--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     </li>
                     -->
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#projects">
+                        <a class="nav-link" href="index.html">
                             <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
                         </a>
                     </li>
