--- a/index.html
+++ b/index.html
@@ -540,12 +540,7 @@
                                     </button>
                                     <div class="collapse" id="collapse9">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Gained hands on experience working in their
-                                                state-of-the-art 3D
-                                                Printing facility, which focuses on creating devices for medical
-                                                applications such as prosthetics.
-                                                Produced multiple medical devices, which are still currently
-                                                being used to assist Doctors there.
+                                            <p style="text-align: left;">After building my own custom 3D Printer I interned at Walter Reed's state-of-the-art 3D Printing facility designing and printing devices for medical applications.
                                             </p>
                                             <p class="date">Jul 2018 - Aug 2018</p>
                                         </div>
