--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                                         <div class="card card-body">
                                             <p style="text-align: left;">Constructed a custom 3D Printer which uses a
                                                 Raspberry Pi to
-                                                access the printer over the local network.
+                                                access the printer over the local network and upgraded components to be able to handle printing in polycarbonate.
                                                 Gained experience with CAD by designing parts for projects made
                                                 with this printer.
                                             </p>
@@ -690,10 +690,7 @@
                                     </button>
                                     <div class="collapse" id="collapse14">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Built a functional and fast first-person-view
-                                                quadcopter to
-                                                gain a better understanding of how all the software and hardware
-                                                components work together.
+                                            <p style="text-align: left;">Built a quadcopter that is controlled with a first-person-view real time video feed to better understand how all the hardware components such as the electronic speed controllers, PDB, radio and video receivers, brushless DC motors, and gyroscope interact with firmware placed on the flight controller.
                                             </p>
                                             <p class="date">Oct 2018 - Dec 2018</p>
                                         </div>
