--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                             <p style="text-align: left;">After training this program with a dataset of
                                                 articles written by different authors it can predict which of these
                                                 authors has written an anonymous articles. This program utilizes
-                                                Multinomial Naive Bayes Multi Classification with a bag-of-words
+                                                Multinomial Naive Bayes Multiclass Classification with a bag-of-words
                                                 representation of the text.</br></br>
                                                 I implemented bigrams and trigrams as well as used the nltk library to
                                                 incorporate lemmetization as methods to improve my accuracy.
