update gomoku ai description

--- a/index.html
+++ b/index.html
@@ -129,12 +129,10 @@
                                     </button>
                                     <div class="collapse" id="collapse1">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Created an AI to play Gomoku, otherwise known
+                                            <p style="text-align: left;">Developed an AI to play Gomoku, otherwise known
                                                 as Five in a Row. Gomoku is like tic-tac-toe except with larger game
                                                 boards and the requirement of 5 of the same type of stone(a player's
-                                                game piece) in a row to win. This AI uses the Minimax algorithm with
-                                                Alpha-Beta Pruning and an optimized method of searching in order to
-                                                determine the best move relatively quickly. </p>
+                                                game piece) in a row to win. This AI uses the Minimax algorithm and a custom point evaluation system to determine the best move. It incorporates Alpha-Beta Pruning and an optimized method of searching in order to reduce computation time. </p>
                                             <p class="date">Jun 2020</p>
                                         </div>
                                         <button onclick="window.location.href = 'https://github.com/Mgla96/GomokuAI'"
