--- a/index.html
+++ b/index.html
@@ -602,9 +602,14 @@
                                         <div class="card card-body">
                                             <p style="text-align: left;">Developed a functional cross-platform Rideshare
                                                 app for college students
-                                                with two other Computer Science students.
+                                                with two other Computer Science students using React Native.
                                             </p>
                                             <p class="date">Apr 2018 - Jan 2019</p>
+                                            <button onclick="window.location.href = 'https://github.com/jrecinos98/GauchoRides'"
+                                            type="button" class="btn btn-outline-dark ">
+                                            View on <i class="fab fa-github"></i>
+                                            </button>
+                                        </button>
                                         </div>
                                     </div>
                                 </div>
