--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/joel-staveley.jpg"
                                                 class="mbr-figure__img rounded img-fluid" alt="Card 2"
-                                                title="Diabetic Retinopothy Predictor">
+                                                title="Diabetic Retinopathy Predictor">
                                         </figure>
                                     </div>
-                                    <h3 class="styled">Diabetic Retinopothy</h3>
+                                    <h3 class="styled">Diabetic Retinopathy</h3>
                                     <h6 class="styled position">Machine Learning</h6>
                                     <p class="software">Software: Python</p>
                                     <div class="separator"></div>
