updating fitness equipment finder

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                                 title="Gomoku AI">
                                         </figure>
                                     </div>
-                                    <h3 class="styled">Gym Equipment Finder</h3>
+                                    <h3 class="styled">Fitness Equipment Finder</h3>
                                     <h6 class="styled position">Web Application</h6>
                                     <p class="software">Software: Python, Flask, Heroku, Postgres</p>
                                     <div class="separator"></div>
@@ -347,13 +347,18 @@
                                         <div class="card card-body">
                                             <p style="text-align: left;">Due to the closure of gyms because of COVID-19,
                                                 fitness equipment was sold out everywhere and was very hard to come by.
-                                                I created this web application that scrapes popular fitness websites
-                                                every hour for in stock deals and displays them all in one place so all
-                                                the effort of searching for in stock equipment is already done. I used
-                                                the scraper successfully for myself when building a home gym and
+                                                Constructed a Python Flask web application hosted on Heroku that utilizes
+                                                cron jobs to scrape equipment information with Beautiful Soup from popular fitness websites and store them in a Postgres
+                                                database. This application displays all in stock items from these fitness websites so all the effort of searching for in stock equipment is already done. 
+                                                I used the scraper successfully for myself when building a home gym and
                                                 converted it into a web application for others to use as well.</p>
                                             <p class="date">Jul 2020</p>
                                         </div>
+                                        <button
+                                            onclick="window.location.href = 'https://github.com/Mgla96/GymEquipmentFinder'"
+                                            type="button" class="btn btn-outline-dark ">
+                                            View on <i class="fab fa-github"></i>
+                                        </button>
                                         <button onclick="window.location.href = 'https://www.weightsinstock.com'"
                                             type="button" class="btn btn-outline-dark ">
                                             weightsinstock.com</i>
