french press iot

--- a/index.html
+++ b/index.html
@@ -109,6 +109,40 @@
 
                     <div class="mt-5 container text-center">
                         <div class="row">
+
+                            <div class="mb-5 mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                                <div class="team-item news c-info">
+                                    <div class="image">
+                                        <figure
+                                            class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
+                                            <img src="css/images/OLEDScreen.png"
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 1"
+                                                title="French Press IoT">
+                                        </figure>
+                                    </div>
+                                    <h3 class="styled">IoT French Press</h3>
+                                    <h6 class="styled position">Hardware & Firmware</h6>
+                                    <p class="software">Software: Python</p>
+                                    <div class="separator"></div>
+                                    <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
+                                        data-target="#collapse0" aria-expanded="false" aria-controls="collapseExample">
+                                        Learn More
+                                    </button>
+                                    <div class="collapse" id="collapse0">
+                                        <div class="card card-body">
+                                            <p style="text-align: left;">Currently building an automatic French Press Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through twitter by tagging my twitter account with 
+                                                the hashtags #darkroast, #mediumroast, or #lightroast and when it is activated through a Siri voice command "make coffee" it makes me coffee based on which roast of coffee bean got voted on the most through twitter in the 
+                                                last 24 hours.</p>
+                                            <p class="date">Aug 2020 - Present</p>
+                                        </div>
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/FrenchPressIoT'"
+                                            type="button" class="btn btn-outline-dark ">
+                                            View on <i class="fab fa-github"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="mb-5 mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                 <div class="team-item news c-info">
                                     <div class="image">
