--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                                     </button>
                                     <div class="collapse" id="collapse0">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Currently building an automatic French Press Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through twitter by tagging my twitter account with 
-                                                the hashtags #darkroast, #mediumroast, or #lightroast and when it is activated through a Siri voice command "make coffee" it makes me coffee based on which roast of coffee bean got voted on the most through twitter in the 
+                                            <p style="text-align: left;">Currently building an automatic French Press Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through Twitter by tagging my Twitter account with 
+                                                the hashtags #darkroast, #mediumroast, or #lightroast and when it is activated through a Siri voice command "make coffee" it makes me coffee based on which roast of coffee bean got voted on the most in the 
                                                 last 24 hours.</p>
                                             <p class="date">Aug 2020 - Present</p>
                                         </div>
