--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         </figure>
                                     </div>
                                     <h3 class="styled">IoT French Press</h3>
-                                    <h6 class="styled position">Hardware & Firmware</h6>
+                                    <h6 class="styled position">Software & Hardware</h6>
                                     <p class="software">Software: Python</p>
                                     <div class="separator"></div>
                                     <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
