--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                                     </div>
                                     <h3 class="">College Rideshare</h3>
                                     <h6 class="styled position">Android/IOS Application</h6>
-                                    <p class="software">Software: XCode, React Native, Firestore, Google Maps
+                                    <p class="software">Software: React Native, Firestore, Google Maps
                                         API</p>
                                     <div class="separator"></div>
                                     <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
