--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                                                 title="French Press IoT">
                                         </figure>
                                     </div>
-                                    <h3 class="styled">IoT French Press</h3>
-                                    <h6 class="styled position">Software & Hardware</h6>
+                                    <h3 class="styled">French Press</h3>
+                                    <h6 class="styled position">Internet of Things</h6>
                                     <p class="software">Software: Python</p>
                                     <div class="separator"></div>
                                     <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
