--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Matt-Gottlieb-Resume.pdf">
+                        <a class="nav-link" href="Matt_Gottlieb_Resume.pdf">
                             <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
                         </a>
                     </li>
