--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/OLEDScreen.png"
                                                 class="mbr-figure__img rounded img-fluid" alt="Card 1"
-                                                title="French Press IoT">
+                                                title="Coffee Machine IoT">
                                         </figure>
                                     </div>
-                                    <h3 class="styled">French Press</h3>
+                                    <h3 class="styled">Coffee Machine</h3>
                                     <h6 class="styled position">Internet of Things</h6>
                                     <p class="software">Software: Python</p>
                                     <div class="separator"></div>
@@ -130,7 +130,7 @@
                                     </button>
                                     <div class="collapse" id="collapse0">
                                         <div class="card card-body">
-                                            <p style="text-align: left;">Currently building an automatic French Press Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through Twitter by tagging my Twitter account with 
+                                            <p style="text-align: left;">Currently building an automatic Coffee Machine that is controlled by a Raspberry Pi. It allows people to vote through Twitter by tagging my Twitter account with 
                                                 the hashtags #darkroast, #mediumroast, or #lightroast and when it is activated through a Siri voice command "make coffee" it makes me coffee based on which roast of coffee bean got voted on the most in the 
                                                 last 24 hours.</p>
                                             <p class="date">Aug 2020 - Present</p>
