--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     <div class="image">
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
-                                            <img src="css/images/OLEDScreen.png"
+                                            <img src="css/images/OLED_Screen.png"
                                                 class="mbr-figure__img rounded img-fluid" alt="Card 1"
                                                 title="Coffee Machine IoT">
                                         </figure>
@@ -135,7 +135,7 @@
                                                 last 24 hours.</p>
                                             <p class="date">Aug 2020 - Present</p>
                                         </div>
-                                        <button onclick="window.location.href = 'https://github.com/Mgla96/FrenchPressIoT'"
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/CoffeeMachineIoT'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
